Add landing hero + new activity icons

--- a/common/assets/styles/root.scss
+++ b/common/assets/styles/root.scss
@@ -298,3 +298,46 @@
   padding-bottom: 16px;
   padding-top: 32px;
 }
+
+.fade-in-image {
+  padding: 0;
+  position: relative;
+  animation: fadeIn 3s;
+  -webkit-animation: fadeIn 3s;
+  -moz-animation: fadeIn 3s;
+  -o-animation: fadeIn 3s;
+  -ms-animation: fadeIn 3s;
+}
+.fade-in-image:before {
+    content: "";
+	float: left;
+	padding-top: 41%;
+
+    @media (max-width: 500px) {
+      padding-top: 120%;
+    }
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
